# LumaSSH

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  style.css  terminal.html  terminal.js  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  connections.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
