[package]
name = "app"
version = "0.1.0"
description = "LummaSSH"
authors = ["lukyn76"]
license = "GPL-3.0 license"
repository = "https://github.com/heyxmirko/LumaSSH"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [ "window-start-dragging", "window-close", "macos-private-api", "window-create"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0.88"
ssh2 = "0.9.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
